@@ -1,5 +1,7 @@
 
 5.2b1 -> 5.3a1
+    - jbj: yarn: convert rpmavx to usage mutex with refcounts.
+    - jbj: rename avContext to rpmavx.
     - jbj: rpmio: functional dir stream positioning.
     - jbj: rpmpgp: elimate msg argument, use __FUNCTION__ everywhere instead.
     - jbj: rpmio: eliminate sha224 and ripemd*, use beecrypt-4.2.0 instead.
